# kolxoz_trading_telegram_bot

./: .gitignore  README.md  main.py  pyproject.toml  pyrightconfig.json  requirements.txt
.github/workflows/: syntax.yml  tests.yml
bot/: initialize_bot.py
bot/agents/: agent.py
bot/agents/mcp_run/: fetch.py
bot/agents/mcp_tools/: get_binance_candles.py  get_cryptonews.py  get_cryptopanic_news.py  get_pivot_levels.py  get_tradingview_data.py
bot/agents/models/: score_breakdown.py  tpsl.py  trade_decision.py
bot/agents/prompts/: final_trade_decision.py  news.py  smart_money_ta.py  trade_decision_aggregator.py  trading_strategy.py  whale_capital_flow.py
bot/agents/utils/: get_decision.py
bot/handlers/: start.py
bot/keyboards/inline/: crypto.py  menu.py
bot/utils/: get_decision.py
tests/: test_entrypoint_structure.py  test_keyboard_config.py  test_prompts.py
tests/handlers/: test_start_handler_behavior.py
