[project]
name = "kolxoz-trading-telegram-bot"
version = "0.1.0"
description = "AI Telegram Bot for kolxoz trading"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiogram>=3.25.0",
    "babel>=2.17.0",
    "langchain>=1.2.10",
    "langchain-openai>=1.1.10",
    "langgraph>=1.0.8",
    "python-dotenv>=1.2.1",
]
